// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addEslintDisableAtTheTopOfText should return content with all rules 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    any content
    any content
    and more content
    
    "
`;

exports[`addEslintDisableAtTheTopOfText should return content with only max-line rule 1`] = `
"
    /* eslint-disable max-lines */
    
    any content
    any content
    and more content
    
    "
`;

exports[`addEslintDisableAtTheTopOfText should return content with only naming-convention rule 1`] = `
"
    
    /* eslint-disable @typescript-eslint/naming-convention */
    any content
    any content
    and more content
    
    "
`;

exports[`addEslintDisableAtTheTopOfText should return content without any rules 1`] = `
"
    
    
    any content
    any content
    and more content
    
    "
`;
